--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Kuyruğum Nerede | TEST</title>
+    <title>Unity WebGL Player | Kuyruğum Nerede</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -18,8 +18,9 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">TEST - Kuyruğum Nerede</div>
+        <div id="unity-build-title">Kuyruğum Nerede</div>
       </div>
     </div>
     <script>
